--- a/packages/client/src/tiptap/styles/table.scss
+++ b/packages/client/src/tiptap/styles/table.scss
@@ -1,7 +1,7 @@
 .ProseMirror {
   .tableWrapper {
     max-width: 100%;
-    margin-top: .75em;
+    margin-top: 0.75em;
     overflow: auto;
 
     &.has-focus {
@@ -12,6 +12,9 @@
   table {
     table-layout: fixed;
     border-collapse: collapse;
+    border-width: 1px;
+    border-style: solid;
+    border-color: var(--semi-color-fill-2);
 
     td,
     th {
@@ -48,7 +51,7 @@
       z-index: 10;
       display: block;
       width: 100%;
-      height: .7em;
+      height: 0.7em;
       margin-bottom: 3px;
       cursor: pointer;
       background: #ced4da;
@@ -65,7 +68,7 @@
       left: -1em;
       z-index: 10;
       display: block;
-      width: .7em;
+      width: 0.7em;
       height: 100%;
       margin-right: 3px;
       cursor: pointer;
@@ -83,8 +86,8 @@
       left: -1em;
       z-index: 10;
       display: block;
-      width: .8em;
-      height: .8em;
+      width: 0.8em;
+      height: 0.8em;
       cursor: pointer;
       background: #ced4da;
       border-radius: 50%;
